<resources>

    <string name="app_name">AndroidMovingMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start_stop_sync">Sync with Server</string>
    <string name="menu_push_server">Sync POI to Server</string>
    <string name="menu_track_point">Track POI</string>
    <string name="menu_cycle_map_type">Cycle map type</string>
    <string name="title_activity_main">Android Moving Map</string>
    <string name="add_poi">Add POI</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="server_gps">Use GPS from server</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="icon_title">Check for icon of fun!</string>
    <string name="icon_summary">Ima be a kitty car</string>
    <string name="select_poi">Select POI</string>
    <string name="title_activity_add_poi">AddPOIActivity</string>
    <string name="compass">Compass</string>
    <string name="north_up">North Up</string>
    <string name="heading_up">Heading Up</string>
    <string name="find_me">Find Me</string>
    <string name="choose_poi_to_display">Choose POI to display</string>
    <string name="poi_spinner_prompt">Choose POI type</string>
    <string name="displayed_poi_title">Choose which POI types to display</string>
    

</resources>