<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/add_poi_type"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="Add POI Type"/>
    <item
        android:id="@+id/menu_start_stop_sync"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/menu_start_stop_sync"/>
    <item
        android:id="@+id/menu_push_server"
        android:orderInCategory="103"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_track_point"
        android:title="@string/menu_track_point"
        android:orderInCategory="104"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_cycle_map_type"
        android:title="@string/menu_cycle_map_type"
        android:orderInCategory="105"
        android:showAsAction="ifRoom" />   
    <item
        android:id="@+id/choose_poi_to_display"
        android:showAsAction="ifRoom"
        android:title="@string/choose_poi_to_display">
    </item>

</menu>
